--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "codingIdePackage": {
     "name": "coding_web_ide_plugin",
-    "displayName": "Environment",
-    "description": "WebIDE-Plugin-Env for Coding WebIDE",
+    "displayName": "Access URL",
+    "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
     "type": "extension",
     "ui": {
       "position": "right",
       "label": {
-        "text": "Environment",
-        "icon": "fa fa-desktop"
+        "text": "Access URL",
+        "icon": "fa fa-external-link"
       }
     }
   },
@@ -70,6 +70,7 @@
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
     "nodemon": "^1.11.0",
+    "qrcode.react": "^0.6.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
