--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WebIDE-Plugin-Env",
+  "name": "WebIDE-Plugin-AccessUrl",
   "version": "0.0.1-alpha.03",
-  "description": "WebIDE-Plugin-Env for Coding WebIDE",
+  "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
   "repository": {
     "url": "https://github.com/blizzardzheng/WebIDE-Plugin-Env.git"
   },
@@ -12,7 +12,7 @@
     "dev": "NODE_ENV=development babel-node node_modules/codingSDK/server.js"
   },
   "codingIdePackage": {
-    "name": "coding_web_ide_plugin",
+    "name": "access-url",
     "displayName": "Access URL",
     "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
     "type": "extension",
