--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
-    "codingSDK": "ssh://git@github.com/blizzardzheng/WebIDE-Plugin-SDK.git",
+    "codingSDK": "https://git@github.com/blizzardzheng/WebIDE-Plugin-SDK.git",
     "css-loader": "^0.26.1",
     "enzyme": "^2.2.0",
     "eslint": "^3.6.0",
