--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,7 @@
     "func-names": 0,
     # propTypes can be object
     "react/forbid-prop-types": 0,
+    # class can use this
+    "class-methods-use-this": 0,
   },
 }
