--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "WebIDE-Plugin-AccessUrl",
-  "version": "0.0.1-alpha.04",
+  "version": "0.0.1-alpha.05",
   "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
   "repository": {
-    "url": "https://github.com/blizzardzheng/WebIDE-Plugin-Env.git"
+    "url": "git@github.com:Coding/WebIDE-Plugin-Env.git"
   },
   "license": "ISC",
   "author": "candy <candy.zhengxq@gmail.com>",
@@ -15,14 +15,7 @@
     "name": "access-url",
     "displayName": "Access URL",
     "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
-    "type": "extension",
-    "ui": {
-      "position": "right",
-      "label": {
-        "text": "Access URL",
-        "icon": "fa fa-external-link"
-      }
-    }
+    "type": "extension"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -34,7 +27,6 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
-    "codingSDK": "https://git@github.com/blizzardzheng/WebIDE-Plugin-SDK.git",
     "css-loader": "^0.26.1",
     "enzyme": "^2.2.0",
     "eslint": "^3.6.0",
@@ -62,6 +54,7 @@
     "react": "^0.14.7 || ^15.0.0"
   },
   "dependencies": {
+    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.06",
     "babel-preset-env": "^1.1.8",
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
