--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WebIDE-Plugin-AccessUrl",
-  "version": "0.0.1-alpha.05",
+  "version": "0.0.1-alpha.06",
   "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
   "repository": {
     "url": "git@github.com:Coding/WebIDE-Plugin-Env.git"
@@ -9,7 +9,8 @@
   "author": "candy <candy.zhengxq@gmail.com>",
   "main": "server.js",
   "scripts": {
-    "dev": "PLUGIN=$(pwd) NODE_ENV=development babel-node node_modules/codingSDK/server.js"
+    "dev": "PLUGIN=$(pwd) NODE_ENV=development babel-node node_modules/codingSDK/server.js",
+    "i18n": "I18nTargetRoot=$(pwd)/i18n/en_US babel-node node_modules/codingSDK/.script/generateI18n $(pwd)/src"
   },
   "codingIdePackage": {
     "name": "access-url",
@@ -36,6 +37,7 @@
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "git-url-parse": "^6.0.1",
+    "immutable": "^3.8.1",
     "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
     "react": "^15.3.2",
@@ -54,11 +56,11 @@
     "react": "^0.14.7 || ^15.0.0"
   },
   "dependencies": {
-    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.06",
     "babel-preset-env": "^1.1.8",
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
+    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.10",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
