--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "PLUGIN=$(pwd) NODE_ENV=development babel-node node_modules/codingSDK/server.js",
-    "i18n": "I18nTargetRoot=$(pwd)/i18n/en_US babel-node node_modules/codingSDK/.script/generateI18n $(pwd)/src"
+    "i18n": "I18nTargetRoot=$(pwd)/i18n babel-node node_modules/codingSDK/.script/generateI18n $(pwd)/src"
   },
   "codingIdePackage": {
     "name": "access-url",
@@ -60,7 +60,7 @@
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
-    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.10",
+    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.11",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
