--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WebIDE-Plugin-AccessUrl",
-  "version": "0.0.1-alpha.06",
+  "version": "0.1.0",
   "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
   "repository": {
     "url": "git@github.com:Coding/WebIDE-Plugin-Env.git"
@@ -60,7 +60,7 @@
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
-    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.0.1-alpha.11",
+    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.1.1-alpha.01",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
