--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WebIDE-Plugin-AccessUrl",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "WebIDE-Plugin-AccessUrl for Coding WebIDE",
   "repository": {
     "url": "git@github.com:Coding/WebIDE-Plugin-Env.git"
@@ -9,8 +9,11 @@
   "author": "candy <candy.zhengxq@gmail.com>",
   "main": "server.js",
   "scripts": {
-    "dev": "PLUGIN=$(pwd) NODE_ENV=development babel-node node_modules/codingSDK/server.js",
-    "i18n": "I18nTargetRoot=$(pwd)/i18n babel-node node_modules/codingSDK/.script/generateI18n $(pwd)/src"
+    "serve": "coding-ide serve",
+    "i18n": "coding-ide i18n",
+    "build": "coding-ide build",
+    "start": "coding-ide start",
+    "prebuild": "yarn"
   },
   "codingIdePackage": {
     "name": "access-url",
@@ -60,7 +63,7 @@
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
-    "codingSDK": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.1.1-alpha.01",
+    "webide-plugin-sdk": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.1.5",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
