--- a/package.json
+++ b/package.json
@@ -63,19 +63,19 @@
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
-    "webide-plugin-sdk": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.1.5",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
     "nodemon": "^1.11.0",
-    "qrcode.react": "^0.6.1",
+    "qrcode.react": "^0.7.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.6.1",
     "socket.io": "^1.7.3",
-    "style-loader": "^0.13.2"
+    "style-loader": "^0.13.2",
+    "webide-plugin-sdk": "https://github.com/Coding/WebIDE-Plugin-SDK.git#0.1.5"
   },
   "engines": {
     "npm": "^3.0.0"
