--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
+    "clipboard": "^2.0.1",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "fs-promise": "^1.0.0",
